--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,59 @@
 body {
   width: 100%;
   height: 100vh;
-background: linear-gradient(#f69d3c, #3f87a6);
-  color: #4B0082;
   margin: 0;
+  background-color: #1b1b32;
+	color: #f5f6f7;
   font-family: Tahoma;
-  font-size: 16px;
+	font-size: 16px;
+  background-repeat: no-repeat;
 }
-h1,p {
 
+h1, p {
   margin: 1em auto;
   text-align: center;
-}
-hr {
-  width: 60%;
 }
 
 form {
   width: 60vw;
-  max-width: 500px;
-  min-width: 300px;
-  margin: 0 auto;
+	max-width: 500px;
+	min-width: 300px;
+	margin: 0 auto;
   padding-bottom: 2em;
 }
 
 fieldset {
   border: none;
-  padding: 2rem 0;
+	padding: 2rem 0;
+}
+
+fieldset:not(:last-of-type) {
+  border-bottom: 3px solid #3b3b4f;
 }
 
 label {
-display: block;
-margin: 0.5rem 0;
+  display: block;
+	margin: 0.5rem 0;
 }
 
-input, textarea, select {
-
+input,
+textarea,
+select {
   margin: 10px 0 0 0;
-  width: 100%;
+	width: 100%;
   min-height: 2em;
 }
 
 input, textarea {
-  background-color: #F4FDFF;
-  border: 1px solid #808080;
-  color: #f69d3c;
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
 }
 
 .inline {
   width: unset;
   margin: 0 0.5em 0 0;
   vertical-align: middle;
-  margin-left: 0.5em;
 }
 
 input[type="submit"] {
@@ -64,3 +66,9 @@ input[type="submit"] {
   border-color: white;
   min-width: 300px;
 }
+
+input[type="file"] {
+  padding: 1px 2px;
+}
+
+
